# valtron-core

./: .coverage.mac_lan.pid1152.XPbwejLx.HNQIp837rWOh  .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  release.yml  test.yml
docs/valtron/: .npmrc  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/: affiliation_extraction.py  cost_model_example.py  incremental_evaluation.py  multimodal_molecules.py  sentiment_classification.py  sentiment_data.json  transformer_comparison.py
examples/comparison_results/: gemini_gemini-2.5-flash_7259425f-44bb-4f23-889b-53687febb6d3.json  gemini_gemini-2.5-flash_7942079a-dd6a-4c27-bcd8-f7d01239443a.json  gemini_gemini-2.5-flash_86074e7e-3045-449a-b322-dc63af390bb2.json  gemini_gemini-2.5-flash_9209b554-3810-411f-9006-e6d70a7133cb.json  gemini_gemini-2.5-flash_a1396af1-a794-4191-93b7-8968a1e4eb35.json  gemini_gemini-2.5-flash_c666f932-b5ba-424e-8283-5fc212e87d24.json  gemini_gemini-2.5-flash_ee096836-1375-4fc2-bc01-beb7211538b4.json  gemini_gemini-2.5-flash_fa5c9751-f28e-4de4-84b7-272c5151fc01.json  gemini_gemini-2.5-pro_0b5149c0-638b-44da-9722-498e8e8e514e.json  gemini_gemini-2.5-pro_50acaac7-b493-4543-9d57-767516c58e91.json  gemini_gemini-2.5-pro_6e0f7ba8-de63-4a42-8666-ed8145c7545a.json  gemini_gemini-2.5-pro_8109352d-4ec0-434f-ab60-580c6de9198e.json  gemini_gemini-2.5-pro_86df4430-54e8-4139-8306-879c00f9c942.json  gemini_gemini-2.5-pro_8e4f30e4-51e9-4eee-97cb-5aab0d5ae442.json  gemini_gemini-2.5-pro_a20458e9-6a66-4997-941b-8505d6de1959.json  gemini_gemini-2.5-pro_d903ca18-d639-413d-bd8f-ea38a7674bb6.json  gpt-3.5-turbo_00e6deed-9284-4ec4-9673-f1939bd9db43.json  gpt-3.5-turbo_41b6856e-4942-458c-a454-15f3e963435b.json  gpt-3.5-turbo_4a9a3dcf-fad9-4030-86a2-365a01f1d3bb.json  gpt-3.5-turbo_58dcb05a-72af-458f-8b14-2707ecf9ca66.json  gpt-3.5-turbo_7d0f4ae9-871d-469f-87be-15556d699801.json  gpt-3.5-turbo_b7fae77b-1ce7-4815-981e-f578ed518118.json  gpt-3.5-turbo_d3f49083-8f5d-4656-aeba-33f1f4516446.json  gpt-3.5-turbo_ee4cbc60-7ec9-4a0a-a85e-7622b6600a30.json  gpt-4-turbo-preview_29e2f180-fde4-4fc2-9350-12ae104894be.json  gpt-4-turbo-preview_2ee137d1-3cdd-4279-9c73-8b07877ff5c6.json  gpt-4-turbo-preview_301a3883-4af7-45a0-accb-2dc389d7f485.json  gpt-4-turbo-preview_40808ea8-9f94-4d9e-bf21-0463f065417d.json  gpt-4-turbo-preview_53208fb1-c065-4a1e-bbb3-735dc79788b9.json  gpt-4-turbo-preview_793e08d8-9a01-4b01-88e6-74c943f2cd5f.json  gpt-4-turbo-preview_a9a30ef2-7239-4e49-8455-72f94f2a12f0.json  gpt-4-turbo-preview_b37fcb7f-3a29-4ed2-997d-e123410ff4ec.json  gpt-4_0870e11f-562e-4fa9-9b44-128f8d9180d5.json  gpt-4_5c65da3b-7fc0-4bfc-a127-1465e6f34deb.json  gpt-4_79157e4d-a834-4255-843c-a8594e397087.json  gpt-4_952084fd-33fe-489f-a57a-e0640c093baa.json  gpt-4_a1a1fc9c-b0ca-4310-8687-2a1072435935.json  gpt-4_b2af7a1f-32f9-412d-8483-ba1b15bd86a4.json  gpt-4_cc485a37-a15f-498b-b4d5-0748525ecf8d.json  gpt-4_e8564605-fc60-4902-b329-991e7cf8eb2a.json  (+8 more)
src/valtron_core/: __init__.py  __main__.py  attachments.py  bert_evaluator.py  bert_trainer.py  client.py  config.py  cost_utils.py  decompose.py  evaluator.py  few_shot_training_data_generator.py  loader.py  model_catalog.py  models.py  optimized_evaluator.py  partial_results.py  progress.py  prompt_optimizer.py  report.py  runner.py  schema_synthesis.py  (+2 more)
tests/: __init__.py  conftest.py  test_bert_evaluator.py  test_bert_trainer.py  test_cli_introspect.py  test_client.py  test_code_introspection.py  test_comparison_benchmarks.py.disabled  test_comparison_edge_cases.py.disabled  test_comparison_functions.py  test_comparisons.py  test_config.py  test_config_wizard.py  test_custom_model_params.py  test_decompose.py  test_evaluator.py  test_explanation_enhancer.py  test_few_shot_generator.py  test_json_eval.py  test_loader.py  test_model_catalog.py  test_model_eval.py  test_optimized_evaluator.py  test_partial_results.py  test_report.py  test_runner.py  test_transformer_wrapper.py
(+57 files in other folders)
