[tool.poetry]
name = "valtron-core"
version = "0.1.0"
description = "LLM call optimization across various providers (online and local models)"
authors = ["InferLink valtron@inferlink.com"]
readme = "README.md"
packages = [{include = "valtron_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
# Core dependencies for LLM optimization
pydantic = "^2.0"
pydantic-settings = "^2.0"
# LiteLLM - Universal LLM interface
litellm = "^1.0.0"
# Configuration management
python-dotenv = "^1.0.0"
# Logging
structlog = "^24.0.0"
# CLI support
typer = "^0.12.0"
rich = "^13.0.0"
# Additional optimization tools
redis = {version = "^5.0.0", optional = true}
# Visualization and reporting
matplotlib = "^3.8.0"
plotly = "^5.18.0"
jinja2 = "^3.1.0"
# Configuration wizard UI
flask = "^3.0.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
# Transformers and ML
transformers = "^4.35.0"
torch = "^2.1.0"
scikit-learn = "^1.3.0"
datasets = "^2.14.0"
google-cloud-aiplatform = "^1.129.0"
google-generativeai = "^0.8.5"
nltk = "^3.9.2"
rapidfuzz = "^3.14.3"
accelerate = "^1.12.0"
# PDF report generation
pylatex = "^1.4.2"
weasyprint = "^62.0"
pydyf = ">=0.11.0,<0.12.0"  # Pin to avoid super().transform bug in 0.12+

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
