[tool.poetry]
name = "valtron-core"
version = "0.1.9"
description = "LLM call optimization across various providers (online and local models)"
authors = ["InferLink <valtron@inferlink.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "valtron_core", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Homepage = "https://github.com/inferlinkdev/valtron-core/"
Documentation = "https://valtron.ai/docs/"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
# Core dependencies for LLM optimization
pydantic = "^2.0"
pydantic-settings = "^2.0"
# LiteLLM - Universal LLM interface
litellm = "^1.0.0"
# Configuration management
python-dotenv = "^1.0.0"
# Logging
structlog = "^24.0.0"
# CLI support
typer = "^0.12.0"
rich = "^13.0.0"
# String similarity (used in core decompose and evaluation)
rapidfuzz = "^3.14.3"
requests = "^2.31.0"
# Visualization and reporting
matplotlib = "^3.8.0"
jinja2 = "^3.1.0"
# Configuration wizard UI
flask = "^3.0.0"
flask-cors = "^4.0.0"
# Optional: transformer model training/inference (pip install valtron-core[transformers])
torch = {version = "^2.4.0", optional = true}
transformers = {version = "^4.35.0", optional = true}
scikit-learn = {version = "^1.3.0", optional = true}
datasets = {version = "^2.18.0", optional = true}
accelerate = {version = ">=0.26.0", optional = true}
nltk = "^3.9.2"
reportlab = "4.4.10"
jsonschema = "^4.26.0"

[tool.poetry.extras]
transformers = ["torch", "transformers", "scikit-learn", "datasets", "accelerate"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
